<resources>
    <string name="app_name">My Resume</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_name">Person Name</string>
    <string name="last_degree">Last degree</string>
    <string name="last_work_exp">Last Position</string>
    <string name="social_media">Social media</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Do you want to delete?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="required">Required</string>
    <string name="invalid">Invalid</string>
    <string name="edit_message">Modify</string>
    <string name="accept">ACCEPT</string>
    <string name="cancel">CANCEL</string>
    <string name="no_data">NO DATA</string>
    <string name="empty_field">FIELD SHOULD NOT BE EMPTY</string>
    <string name="save">SAVE</string>
    <string name="saved">SAVED</string>
    <string name="select_img_error">Selecting image ERROR</string>
    <string name="take_picture_error">Taking Picture ERROR</string>
    <string name="select_app">Select application</string>
    <string name="select_option">Select an Option</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="memory_access_denied">Storage access restricted</string>
    <string name="rationale_message">You should allow storage access to load the image</string>
    <string name="rationale_file_message">You should allow storage access to create the file</string>
    <string name="grant_permission">PERMISSION REQUIRED</string>
    <string name="grant_permission_message">You should allow storage access to load the image.\n
                                        Would you like to do it now?</string>
    <string name="grant_file_permission_message">You should allow storage access to create the file.\n
                                        Would you like to do it now?</string>
    <string name="person_info_missing">You should load personal data first</string>
    <string name="degree_missing">You should load any degree first</string>
    <string name="work_exp_missing">No previous experience</string>
    <string name="language_missing">You should load one language at least</string>
    <string name="person_image_missing">Personal image missing</string>
    <string name="generate_pdf">Generate PDF file</string>
    <string name="pdf_file_generated">PDF file generated in: </string>
    <string name="folder_name">/resume_docs</string>
    <string name="pdf_file_name">my_resume.pdf</string>
    <string name="exit_app">Exit app</string>
    <string name="exit_app_message">Do you wish to exit app?</string>

    <string name="general_data">General data</string>
    <string name="personal_info">Personal info</string>
    <string name="edit_person_info">Edit personal info</string>
    <string name="person_name">Name</string>
    <string name="birthday">Birth date</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="instagram">instagram</string>
    <string name="skype">skype</string>

    <string name="degrees">Degrees</string>
    <string name="new_degree">Add Degree</string>
    <string name="degree_details">Degree Details</string>
    <string name="edit_degree">Edit Degree</string>
    <string name="text_discipline">Discipline</string>
    <string name="text_start_date">Start Date</string>
    <string name="text_end_date">End Date</string>
    <string name="text_average">Average</string>
    <string name="degree">Degree</string>
    <string name="university">University</string>

    <string name="working_experience">Working Experience</string>
    <string name="new_work_exp">Add Working Experience</string>
    <string name="edit_work_exp">Edit Working Experience</string>
    <string name="work_exp_details">Work Exp Details</string>
    <string name="company_name">Company Name</string>
    <string name="text_company">Company</string>
    <string name="text_position">Position</string>
    <string name="description">Description</string>
    <string name="work_exp_saved">Work Exp SAVED</string>

    <string name="languages">Languages</string>
    <string name="language">Language</string>
    <string name="language_level_1">Basic</string>
    <string name="language_level_2">Basic limited</string>
    <string name="language_level_3">Basic professional</string>
    <string name="language_level_4">Professional</string>
    <string name="language_level_5">Bilingual or native</string>
    <string name="language_exists">Language already exists</string>
    <string name="new_language">New Language</string>
    <string name="edit_language">Edit Language</string>

    <string name="skills">Skills</string>
    <string name="new_skill">Add Skill</string>
    <string name="type_new_skill">Type the new Skill</string>
</resources>
